fix spacing with search buttons and color when hovering over filter

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -127,6 +127,10 @@ header {
   background-color: var(--alert-background);
 }
 
+#button-search-filter:hover {
+  background-color: #0041a3;
+}
+
 @media screen and (max-width: 992px) {
   .navbar-nav .separator {
     display: none;
